# vespa

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
tests/: confitest.py  conftest.py
tests/datatsets_tests/: test_coco_dataset.py  test_pascal_voc_dataset.py  test_yolo_dataset.py
tests/models_tests/RCNN/: test_rcnn.py  test_rcnn_pre_trained.py
tests/test_datasets/: test_retina_dataset.py
tests/test_methods/: conftest.py
tests/test_methods/retinanet/: conftest.py  test_retinanet_pretrained.py  test_retinanet_sketch.py
vespa/datasets/: base_dataset.py  config.py  dataset_factory.py  hyps.yaml
vespa/datasets/PascalVOC/: hyps_pascal_voc.yaml  pascal_voc_dataset.py  pascal_voc_transforms.py
vespa/datasets/coco/: coco_dataset.py  coco_tranforms.py  coco_transforms.py  hyps_coco.yaml
vespa/datasets/kitti/: hyps_kitti.yaml  kitti_dataset.py  kitti_transforms.py
vespa/datasets/retina/: retirna_dataset.py  utils.py
vespa/datasets/yolo/: yolo_dataset.py  yolo_transforms.py
vespa/methods/: base_model.py  model_utils.py  utils.py
vespa/methods/rcnn/: model.py  test_model.py
vespa/methods/retinanet/: hyps.yaml  model.py
vespa/utils/: utils.py
