[tool.poetry]
name = "vespa"
version = "0.1.0"
description = ""
authors = ["jefferson-norberto2 <jmn@cin.ufpe.br>", "matheus <mhjc@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
