[tool.poetry]
name = "vespa"
version = "0.1.0"
description = ""
authors = ["jefferson-norberto2 <jmn@cin.ufpe.br>", "matheus <mhjc@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.6.0"
albumentations = "^1.4.24"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
onnxruntime = "^1.20.1"
pycocotools = "^2.0.8"
numpy = "1.26.4"
ruff = "^0.9.0"
pytest = "^8.3.4"
taskipy = "^1.14.1"

# Torch 2.2.2 with CUDA 12.1 or higher
torch = [
    {url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp312-cp312-win_amd64.whl", platform = "win32"},
    {url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp312-cp312-linux_x86_64.whl", platform = "linux"}
]
torchaudio = [
    {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.2%2Bcu121-cp312-cp312-win_amd64.whl", platform = "win32"},
    {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.2%2Bcu121-cp312-cp312-linux_x86_64.whl", platform = "linux"}
]
torchvision = [
    {url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp312-cp312-win_amd64.whl", platform = "win32"},
    {url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp312-cp312-linux_x86_64.whl", platform = "linux"}
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
docstring-code-format = true
docstring-code-line-length = 20

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format' 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
